fix transition table